@@ -879,6 +879,7 @@ Release 2.7.0 - 2015-04-20
     YARN-3369. Missing NullPointer check in AppSchedulingInfo causes RM to die.
     (Brahma Reddy Battula via wangda)
 
+<<<<<<< HEAD
     YARN-3384. TestLogAggregationService.verifyContainerLogs fails after
     YARN-2777. (Naganarasimha G R via ozawa)
 
@@ -905,6 +906,8 @@ Release 2.7.0 - 2015-04-20
     and node-label column (Jason Lowe via wangda)
 
 >>>>>>> b34825b... YARN-3753. RM failed to come up with "java.io.IOException: Wait for ZKClient creation timed out". Contributed by Jian He
+=======
+>>>>>>> 57a0382... YARN-3369. Missing NullPointer check in AppSchedulingInfo causes RM to die. (Brahma Reddy Battula via wangda)
 Release 2.6.0 - 2014-11-18
 
   INCOMPATIBLE CHANGES
